--- a/MkDocs/docs/space/posts/20240907-1.md
+++ b/MkDocs/docs/space/posts/20240907-1.md
@@ -9,7 +9,7 @@ categories:
 
 刚刚问 GPT 才知道的。
 
-不过这个语法我觉得多少有点令人不适，太难看了。反正我是没法接受任何形式的行尾空格，编辑器里全部自动标红。<br>
+不过这个语法我觉得多少有点令人不适，太难看了。反正我是没法接受任何形式的行尾空格，编辑器里全部自动标红。
 我马上去把 MkDocs 的软换行打开，这样就不用手动 `<br>` 了。
 <!-- more -->
 
@@ -17,3 +17,28 @@ categories:
 markdown_extensions:
   - markdown.extensions.nl2br
 ```
+
+ ---
+
+5:19 更新：由于 Markdown 里的换行全部变成 `<br>`，部分文章内的按钮布局炸了。
+```markdown title=""
+<p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown>
+[Btn1](.){.md-button}
+[Btn2](.){.md-button}
+[Btn3](.){.md-button}
+</p>
+```
+<p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown>
+[Btn1](.){.md-button}
+[Btn2](.){.md-button}
+[Btn3](.){.md-button}
+</p>
+原本这里三个按钮好好的，但是现在多了一堆 `<br>` 产生了额外的间隙。
+于是又鼓捣一通，加了个 `<nobr>` 功能，在这个标签/属性内，自动删掉所有 `<br>`。
+
+加了 `<nobr>` 的效果：
+<p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown nobr>
+[Btn1](.){.md-button}
+[Btn2](.){.md-button}
+[Btn3](.){.md-button}
+</p>
