--- a/MkDocs/docs/space/posts/20240907-1.md
+++ b/MkDocs/docs/space/posts/20240907-1.md
@@ -20,7 +20,8 @@ markdown_extensions:
 
  ---
 
-5:19 更新：由于 Markdown 里的换行全部变成 `<br>`，部分文章内的按钮布局炸了。
+5点19分更新：
+由于 Markdown 里的换行全部变成 `<br>`，部分文章内的按钮布局炸了。
 ```markdown title=""
 <p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown>
 [Btn1](.){.md-button}
@@ -42,3 +43,9 @@ markdown_extensions:
 [Btn2](.){.md-button}
 [Btn3](.){.md-button}
 </p>
+
+ ---
+
+5点37分再更新：
+这个 nl2br 扩展太不智能了，比如在 <code>&#96;&#96;&#96;</code> 代码块的末尾，它也给加个 `<br>`，排版都搞乱了。
+再弄就没法睡觉了，下次有空再优化下，比如只在普通文本末尾加换行。
