删除一些不顺眼的<br>

--- a/MkDocs/docs/space/posts/20240410.md
+++ b/MkDocs/docs/space/posts/20240410.md
@@ -7,7 +7,7 @@ categories:
 
 # PT v0.80.0 汉化
 
-PowerToys v0.80.0 的汉化终于做好啦<br>
+PowerToys v0.80.0 的汉化终于做好啦
 有个 resource.h 死活编译不出来，最后一通调试发现需要把编码从 UTF-8 改成 UTF-8 BOM 才行
 
 上次我是直接手动给他写了一份 resources.h（捂脸
