固化html，防止以后修复

--- a/MkDocs/docs/space/posts/20240907-1.md
+++ b/MkDocs/docs/space/posts/20240907-1.md
@@ -29,20 +29,22 @@ markdown_extensions:
 [Btn3](.){.md-button}
 </p>
 ```
-<p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown>
+<!-- <p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown>
 [Btn1](.){.md-button}
 [Btn2](.){.md-button}
 [Btn3](.){.md-button}
-</p>
+</p> -->
+<p style="display: flex; gap: 20px; flex-wrap: wrap;"><br><a class="md-button" href=".">Btn1</a><br><a class="md-button" href=".">Btn2</a><br><a class="md-button" href=".">Btn3</a><br></p>
 原本这里三个按钮好好的，但是现在多了一堆 `<br>` 产生了额外的间隙。
 于是又鼓捣一通，加了个 `<nobr>` 功能，在这个标签/属性内，自动删掉所有 `<br>`。
 
 加了 `<nobr>` 的效果：
-<p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown nobr>
+<!-- <p style="display: flex; gap: 20px; flex-wrap: wrap;" markdown nobr>
 [Btn1](.){.md-button}
 [Btn2](.){.md-button}
 [Btn3](.){.md-button}
-</p>
+</p> -->
+<p style="display: flex; gap: 20px; flex-wrap: wrap;"><a class="md-button" href=".">Btn1</a><a class="md-button" href=".">Btn2</a><a class="md-button" href=".">Btn3</a></p>
 
  ---
 
